Alter AppSettings With New DataBase

--- a/SistemaTarefa/appsettings.json
+++ b/SistemaTarefa/appsettings.json
@@ -7,7 +7,7 @@
     },
     // Connection string do banco de dados SQL Server
     "ConnectionStrings": {
-        "DataBase": "Server=./;Data Source=SESI-PEDERNEIRA\\SQLEXPRESS;Database=DbApiTarefas;TrustServerCertificate=True;Integrated Security= True;"
+        "DataBase": "Server=./;Data Source=SESI-PEDERNEIRA\\SQLEXPRESS;Database=DbApiTarefasJWT;TrustServerCertificate=True;Integrated Security= True;"
     },
     "AllowedHosts": "*"
 }
